compiler/test/programs/syntax_error/invalid_value_type.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluir >
    <function
        name="foo"
        id="1"
        x="10"
        y="10"
        z="3"
        w="100"
        h="100">
        <body>
            <not-a-constant
                id="1"
                x="0"
                y="10"
                z="3"
                w="5"
                h="5">
                <f64>0.0</f64>
            </not-a-constant>
        </body>
    </function>
</fluir>
